Email and Username for Github

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2> My Name is Jean Paul Perez</h2>
     <img src="IMG_6443.png" alt="My photo">
     <p>I like To learn How to code, the motorbikes and soccer.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore deleniti molestias in similique eius error itaque expedita magni esse, culpa reiciendis totam vel, obcaecati corporis illum dolorem doloremque, officiis aut.</p>
     <p><b>Email:</b>jeanpaul232004@gmail.com</p>
     <h2>List of assigments</h2>
 </body>
