--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore deleniti molestias in similique eius error itaque expedita magni esse, culpa reiciendis totam vel, obcaecati corporis illum dolorem doloremque, officiis aut.</p>
     <p><b>Email:</b>jeanpaul232004@gmail.com</p>
     <h2>List of assigments</h2>
+    <ul>
+        li*3>{Exercise}
+    </ul>
 </body>
 </html>
