--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <p><b>Email:</b>jeanpaul232004@gmail.com</p>
     <h2>List of assigments</h2>
     <ul>
-        li*3>{Exercise}
+        <li>Exercise 1</li>
+        <li>Exercise 2</li>
+        <li>Exercise 3</li>
+        <li>Exercise 4</li>
     </ul>
 </body>
 </html>
