--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <p><b>Email:</b>jeanpaul232004@gmail.com</p>
     <h2>List of assigments</h2>
     <ul>
-        <li>Exercise 1</li>
+        <li> <a href="/exercise2/exercise2.html"> Link to exercise 2</a>Exercise 2</li>
         <li>Exercise 2</li>
         <li>Exercise 3</li>
         <li>Exercise 4</li>
