--- a/Recipe/index.html
+++ b/Recipe/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Classic Veggie Stir-Fry</h1>
+    <div class="contenedor">
     <img src="/Recipe/Image/Food.jpg" alt="">
+    </div>
     <p>This quick and easy veggie stir-fry is a healthy, colorful dish packed with fresh vegetables and a savory sauce. It’s perfect for a light lunch or dinner and can be served with rice or noodles for a more filling meal. Ready in under 20 minutes!</p>
     <h2>Ingredients</h2>
     <ul>
