--- a/exercise5/exercise5.html
+++ b/exercise5/exercise5.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Exercise 5</title>
+    <link rel="stylesheet" href="colorlinks.css">
 
     <style>
 
@@ -11,6 +12,23 @@
       margin:0 auto;
       font-family: sans-serif;
     }
+     a:link { color: red; }  
+     a:focus { color: yellow; } 
+     a:hover { color: rgb(0, 251, 255); } 
+     a:active { color: maroon; }
+     nav a{
+      color: black;
+      text-decoration: none;
+     }
+     nav a:hover{
+      text-decoration: underline;
+      color: black;
+     }
+     input:focus{
+      background-color: aqua;
+      border: solid;
+      border-radius: 5px;
+     }
       
  /* Add CSS code here */
 
