--- a/midterm/index.html
+++ b/midterm/index.html
@@ -21,11 +21,11 @@
                 <a href="">More like this</a>
             </nav>
             <main>
-                <div class="col">
                 <h2>Arcane</h2>
+                <div class="col">
                 <h2>2021,TV-14, 1 Season</h2>
                 <p>Dive into the divided cities of Piltover and Zaun in this visually stunning animated series based on League of Legends. Follow the emotional journey of sisters Vi and Jinx as they navigate a world of technology, inequality, and personal conflict. With breathtaking animation and a gripping story, Arcane is a must-watch!</p>
-                <div></div>
+                </div>
                 <div class="col">
                     <p><strong>Creators:</strong>Christian Linke, Alex Yee</p>
                     <p><strong>Cast:</strong>Hailee Steinfeld, Ella Purnell, Katie Leung, Kevin Alejandro, Jason Spisak, Toks Olagundoye, Harry Lloyd</p>
@@ -33,7 +33,7 @@
                 </div>
             </main>
             <footer>
-
+           <p>meme</p>
             </footer>
     </div>
 </body>
