--- a/quizzes/quiz1.html
+++ b/quizzes/quiz1.html
@@ -6,6 +6,22 @@
 
     <style>
     /* Type CSS code here */
+    h1 {
+        color: red;
+      }
+
+      header h1 {
+        color: red;
+      }
+
+      .main-title {
+        color: red;
+      }
+
+      #site-title {
+        color: red;
+      }
+
 
     </style>
 
