--- a/midterm/index.html
+++ b/midterm/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arcane-Netflix</title>
     <link rel="stylesheet" href="Style.css">
+    <a href="index.html">Home</a>
+    <a href="episodes.html">Episodes</a>
 </head>
 <body>
     <div id="wrapper">
