--- a/exercise7/exercise7.html
+++ b/exercise7/exercise7.html
@@ -10,6 +10,12 @@
     #wrapper{
       max-width:1200px;
       margin:0 auto;
+      background-color: black;
+
+    }
+    .flex-container{
+      display: flex;
+      color: white;
     }
 
     .flex-item{
@@ -18,10 +24,12 @@
       padding:5px;
       border-radius: 10px;
       margin:0.5em;
+      flex: 1 0 0;
     }
 
     .lead{
       border:none;
+      flex: 2 0 0 auto;
     }
 
     .img-responsive{
