--- a/exercise8/exercise8.html
+++ b/exercise8/exercise8.html
@@ -41,7 +41,17 @@
     nav li a:hover{
       text-decoration: underline;
     }
-
+    @media  screen and (max-width:600px) {
+      nav li{
+        display: block;
+        padding:1em;
+        border-right: none;
+        border-bottom: solid 1px #fff;
+      }
+      nav{
+        padding: 0;
+      }
+    }
 
 
     </style>
