--- a/midterm/episodes.html
+++ b/midterm/episodes.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arcane-Netflix</title>
     <link rel="stylesheet" href="Style.css">
-    <a href="index.html">Home</a>
-    <a href="episodes.html">Episodes</a>
 </head>
 <body>
     <div id="wrapper">
@@ -18,8 +16,8 @@
             </div>
         </header>
             <nav>
-                <a href="">About</a>
-                <a href="">Episodes</a>
+                <a href="index.html">About</a>
+                <a href="episodes.html">Episodes</a>
                 <a href="">More like this</a>
             </nav>
             <main>
@@ -27,7 +25,7 @@
                 <h3>Season 1</h3>
                 <div class="episodes">
                     <div class="episodes-cards">
-                        <img src="images/zaun.jpeg" alt="Zaun">
+                        <img src="images/zaun2.0.png" alt="Zaun">
                         <h4>1.Welcome:</h4>
                         <p>to the Playground In the divided cities of Piltover and Zaun, sisters Vi and Powder face a dangerous heist that changes their lives forever.</p>
                     </div>
@@ -37,7 +35,7 @@
                         <p>Vi and Powder struggle to survive in Zaun, while Jayce and Viktor make a groundbreaking discovery in Piltover.</p>
                     </div>
                     <div class="episodes-cards">
-                        <img src="images/ChildJinx.jpeg" alt="">
+                        <img src="images/ChildJinx2.0.png" alt="">
                         <h4>3.The Base Violence Necessary for Change:</h4>
                         <p>Tensions rise as Vi is separated from Powder, and Jayce faces the consequences of his actions in the Council.</p>
                     </div><div class="episodes-cards">
@@ -45,7 +43,7 @@
                         <h4>4.Happy Progress Day!:</h4>
                         <p>Piltover celebrates Progress Day, but chaos erupts as Powder’s actions lead to devastating consequences.</p>
                     </div><div class="episodes-cards">
-                        <img src="images/vix&powder.jpeg" alt="">
+                        <img src="images/vix&powder2.0.png" alt="">
                         <h4>5.Everybody Wants to Rule the World:</h4>
                         <p>Vi seeks revenge, while Powder transforms into Jinx, embracing her new identity. Jayce and Viktor’s partnership faces challenges.</p>
                     </div><div class="episodes-cards">
@@ -53,12 +51,12 @@
                         <h4>6.When These Walls Come Tumbling Down:</h4>
                         <p>The conflict between Piltover and Zaun reaches a boiling point, and Jinx’s actions threaten to destroy everything.</p>
                     </div><div class="episodes-cards">
-                        <img src="images/ekko.jpeg" alt="">
+                        <img src="images/ekko2.0.png" alt="">
                         <h4>7.The Boy Savior:</h4>
                         <p>Jayce takes drastic measures to protect Piltover, while Vi and Caitlyn form an unlikely alliance to stop Jinx.</p>
                     </div>
                     <div class="episodes-cards">
-                        <img src="images/oil and water.jpeg" alt="">
+                        <img src="images/oil and water2.0.png" alt="">
                         <h4>Oil and Water:</h4>
                         <p>The fates of Piltover and Zaun hang in the balance as Jinx unleashes her final plan, forcing everyone to confront their past.</p>
                     </div>
