--- a/midterm/index.html
+++ b/midterm/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arcane-Netflix</title>
     <link rel="stylesheet" href="Style.css">
-    <a href="index.html">Home</a>
-    <a href="episodes.html">Episodes</a>
 </head>
 <body>
     <div id="wrapper">
@@ -18,8 +16,8 @@
             </div>
         </header>
             <nav>
-                <a href="">About</a>
-                <a href="">Episodes</a>
+                <a href="index.html">About</a>
+                <a href="episodes.html">Episodes</a>
                 <a href="">More like this</a>
             </nav>
             <main>
