--- a/Exercise10/index.html
+++ b/Exercise10/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_drop_down" />
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="#">Fruits</a>
+            <li>
+                <span class="material-symbols-outlined">
+                    arrow_drop_down
+                    </span>
+                <a href="#">Fruits</a>
                 <ul>
                     <li><a href="#">Apple</a></li>
                     <li><a href="">Orange</a></li>
@@ -17,6 +22,9 @@
                 </ul>
             </li>
             <li>
+                <span class="material-symbols-outlined">
+                    arrow_drop_down
+                    </span>
                 <a href="#">Vegetables</a>
                 <ul>
                     <li><a href="#">cabagge</a></li>
