--- a/Finalexam/index.html
+++ b/Finalexam/index.html
@@ -6,17 +6,20 @@
     <title>Design @ CUNY</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=menu" />
   </head>
   <body>
       <div id="wrapper">
         <header>
           <h1>Design @ CUNY</h1>
-          <img src="" alt="">
+          <span class="material-symbols-outlined">
+            menu
+            </span>
           <nav id="top-nav">
             <ul>
-                <li>ABOUT CUNY</li>
-                <li>FINANCIAL AID</li>
-                <li>APPLY</li>
+                <li> <a href="https://www.cuny.edu/">ABOUT CUNY</a></li>
+                <li><a href="https://www.cuny.edu/financial-aid/">FINANCIAL AID</a></li>
+                <li><a href="https://www.cuny.edu/admissions/apply-to-cuny/">APPLY</a></li>
             </ul>
             <form action=""><input type="search"></form>
           </nav>
