--- a/Final Exam Demo/index.html
+++ b/Final Exam Demo/index.html
@@ -26,7 +26,7 @@
 
       <!-- Logo CUNY -->
       <div class="cuny-logo">
-        <img src="images/cuny-logo.png" alt="CUNY Logo">
+        <img src="Images/CUNY Joins With InStride to Expand Career-Boosting Online Educational Opportunities for Workers 1.png" alt="CUNY Logo">
       </div>
 
       <!-- Navegación -->
@@ -84,8 +84,8 @@
         <a href="#" class="btn-apply">APPLY</a>
       </div>
       <div class="hero-logos">
-        <img src="images/queens-college-logo.png" alt="Queens College Logo">
-        <img src="images/cuny-logo.png" alt="CUNY Logo">
+        <img src="Images/Queens 1.png" alt="Queens College Logo">
+        <img src="Images/CUNY Joins With InStride to Expand Career-Boosting Online Educational Opportunities for Workers 1.png" alt="CUNY Logo">
       </div>
     </section>
 
@@ -112,7 +112,7 @@
         <!-- Events -->
         <section class="events">
           <h2>Events</h2>
-          <img src="images/design-wordcloud.png" alt="Design Wordcloud">
+          <img src="Images/UX 1.png" alt="Design Wordcloud">
           <h3>Virtual Digital Design Showcase Day</h3>
           <p><strong>Date:</strong> June 18, 2020</p>
           <p><strong>Time:</strong> 2:00 PM — 4:00 PM</p>
