--- a/Final Exam/index.html
+++ b/Final Exam/index.html
@@ -20,7 +20,7 @@
       <div class="logo-menu">
         <h1 class="site-title">Design @ CUNY</h1>
         <button id="menu-toggle" class="menu-btn" aria-label="Toggle Menu">
-          <span class="material-symbols-outlined">menu</span>
+          <span class="material-symbols-outlined" onclick="showmenu();">menu</span>
         </button>
       </div>
 
@@ -127,7 +127,7 @@
   </div>
 
   <!-- JavaScript para toggle del menú -->
-  <script src="script.js"></script>
+  <script src="showmenu.js"></script>
 </body>
 </html>
 
