--- a/Final/index.html
+++ b/Final/index.html
@@ -15,7 +15,7 @@
     <header>
       <h1><a href="index.html">CUNY DESIGN</a></h1>
         <nav class="topnav">
-          <img class="menu-icon" src="images/menu.svg" alt="menu" onClick="showMenu();">
+          <img class="menu-icon" src="Final/images/menu.svg" alt="menu" onClick="showMenu();">
 
           <div id="dropmenu">
             <ul>
@@ -36,20 +36,20 @@
         <h3>Search by</h3>
         <nav>
           <ul class="program-menu">
-            <li><strong><a href="discipline.html">Discipline<img src="images/expand.svg" alt="more"></a></strong>
+            <li><strong><a href="discipline.html">Discipline<img src="Final/images/expand.svg" alt="more"></a></strong>
               <ul>
                 <li><a href="digitaldesign.html">Digital Design</a></li>
               <li><a href="animation.html">Animation</a></li>
               <li><a href="industrial.html">Industrial Design</a></li>
               </ul>
             </li>
-            <li><strong><a href="degree.html">Degree<img src="images/expand.svg" alt="more"></a></strong>
+            <li><strong><a href="degree.html">Degree<img src="Final/images/expand.svg" alt="more"></a></strong>
               <ul>
               <li><a href="associate.html">Associate</a></li>
               <li><a href="bachelor.html">Bachelor</a></li>
             </ul>
           </li>
-          <li><strong><a href="borough.html">Borough<img src="images/expand.svg" alt="more"></a></strong>
+          <li><strong><a href="borough.html">Borough<img src="Final/images/expand.svg" alt="more"></a></strong>
             <ul>
             <li><a href="brooklyn.html">Brooklyn</a></li>
             <li><a href="manhattan.html">Manhattan</a></li>
