--- a/Final/brooklyn.html
+++ b/Final/brooklyn.html
@@ -101,7 +101,7 @@
 
 <a href="https://www.kbcc.cuny.edu/academicdepartments/art/about.html" class="card-link">
 <div class="card">
-  <img src=images/nyt2.jpg alt="nyt2">
+  <img src="images/GraphicDesign illustrator .jpg" alt="nyt2">
   <div class="card-body">
     <h3>Kingsborough Community College</h3>
     <h2>Graphic Design and Illustration</h2>
