--- a/Final/digitaldesign.html
+++ b/Final/digitaldesign.html
@@ -76,7 +76,7 @@
 
 <a href="http://www.bcc.cuny.edu/academics/academic-departments/art-and-music-department/degree-and-certificate-programs-courses/digital-design/" class="card-link">
 <div class="card">
-  <img src=images/digital1.jpg alt="digital1">
+  <img src="images/digital1.jpg" alt="digital1">
   <div class="card-body">
     <h3>Bronx Community College</h3>
     <h2>Digital Design</h2>
@@ -89,7 +89,7 @@
 
 <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Game-Design-(1)" class="card-link">
 <div class="card">
-  <img src=images/digital2.jpg alt="digital2">
+  <img src="images/digital2.jpg" alt="digital2">
   <div class="card-body">
     <h3>Hostos Community College</h3>
     <h2>Game Design</h2>
@@ -101,7 +101,7 @@
 
 <a href="https://www.kbcc.cuny.edu/academicdepartments/art/about.html" class="card-link">
 <div class="card">
-  <img src=images/nyt2.jpg alt="nyt2">
+  <img src="images/GraphicDesign illustrator .jpg" alt="Graphic Design">
   <div class="card-body">
     <h3>Kingsborough Community College</h3>
     <h2>Graphic Design and Illustration</h2>
@@ -113,7 +113,7 @@
 
 <a href="https://www.laguardia.edu/new-media-technology/" class="card-link">
 <div class="card">
-  <img src=images/queens2.jpg alt="queens2">
+  <img src="images/queens2.jpg" alt="queens2">
   <div class="card-body">
     <h3>LaGuardia Community College</h3>
     <h2>New Media Technology</h2>
@@ -138,7 +138,7 @@ Students develop a broad understanding of multimedia and Internet technologies i
 
 <a href="http://www.citytech.cuny.edu/communication-design/communication-design-aas.aspx" class="card-link">
 <div class="card">
-  <img src=images/nyt.jpg alt="nyt">
+  <img src="images/nyt.jpg" alt="nyt">
   <div class="card-body">
     <h3>New York City College of Technology</h3>
     <h2>Communication Design</h2>
@@ -150,7 +150,7 @@ Students develop a broad understanding of multimedia and Internet technologies i
 
 <a href="http://www.citytech.cuny.edu/communication-design/communication-design-aas.aspx" class="card-link">
 <div class="card">
-  <img src=images/nyt3.jpg alt="nyt3">
+  <img src="images/nyt3.jpg" alt="nyt3">
   <div class="card-body">
     <h3>New York City College of Technology</h3>
     <h2>Communication Design</h2>
@@ -162,7 +162,7 @@ Students develop a broad understanding of multimedia and Internet technologies i
 
 <a href="https://edm.arts.ccny.cuny.edu/" class="card-link">
 <div class="card">
-  <img src=images/city.jpg alt="city">
+  <img src="images/city.jpg" alt="city">
   <div class="card-body">
     <h3>The City College of New York</h3>
     <h2>Electronic Design and Multimedia</h2>
@@ -174,7 +174,7 @@ Students develop a broad understanding of multimedia and Internet technologies i
 
 <a href="http://www.york.cuny.edu/produce-and-print/contents/bulletin/school-of-arts-and-sciences/performing-and-fine-arts/communications-technology-bs" class="card-link">
 <div class="card">
-  <img src=images/york.jpg alt="york">
+  <img src="images/Electronic Design.webp" alt="york">
   <div class="card-body">
     <h3>York College</h3>
     <h2>Electronic Design and Multimedia</h2>
@@ -186,7 +186,7 @@ Students develop a broad understanding of multimedia and Internet technologies i
 
 <a href="https://www.baruch.cuny.edu/confluence/pages/viewpage.action?pageId=24052375" class="card-link">
 <div class="card">
-  <img src=images/baruch.jpg alt="baruch">
+  <img src="images/baruch.jpg" alt="baruch">
   <div class="card-body">
     <h3>Baruch College</h3>
     <h2>Graphic Communication</h2>
