--- a/Final/animation.html
+++ b/Final/animation.html
@@ -64,7 +64,7 @@
 <main>
 <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
 <div class="card">
-  <img src=images/bmcc4.jpg alt="bmcc4">
+  <img src="images/bmcc4.jpg" alt="bmcc4">
   <div class="card-body">
     <h3>Bourough of Manhattan Commiunty College</h3>
     <h2>Animation</h2>
@@ -76,7 +76,7 @@
 
 <a href="https://www.hostos.cuny.edu/www-hostosdesign-com" class="card-link">
 <div class="card">
-  <img src=images/hostos2.jpg alt="hostos2">
+  <img src="images/hostos2.jpg" alt="hostos2">
   <div class="card-body">
     <h3>Hostos Community College</h3>
     <h2>Digital Design and Animation</h2>
@@ -88,7 +88,7 @@
 
 <a href="https://www.qc.cuny.edu/academics/art//design-curriculum/" class="card-link">
 <div class="card">
-  <img src=images/queens2.jpg alt="queens2">
+  <img src="images/queens2.jpg" alt="queens2">
   <div class="card-body">
     <h3>Queensborough Community College</h3>
     <h2>Design</h2>
@@ -100,7 +100,7 @@
 
 <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
 <div class="card">
-  <img src=images/lehnam2.jpg alt="lehnam2">
+  <img src="images/graphic-designer-at-work.jpg" alt="lehnam2">
   <div class="card-body">
     <h3>Lehman College</h3>
     <h2>Computer Graphics and Imaging</h2>
