--- a/Final/bachelor.html
+++ b/Final/bachelor.html
@@ -77,7 +77,7 @@
 
   <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
   <div class="card">
-    <img src=images/lehnam2.jpg alt="lehman2">
+    <img src="images/graphic-designer-at-work.jpg" alt="lehman2">
     <div class="card-body">
       <h3>Lehman College</h3>
       <h2>Computer Graphics and Imaging</h2>
@@ -90,7 +90,7 @@
 
   <a href="https://www.qc.cuny.edu/academics/art//design-curriculum/" class="card-link">
   <div class="card">
-    <img src=images/queens3.jpg alt="queens3">
+    <img src="images/queens3.jpg" alt="queens3">
     <div class="card-body">
       <h3>Queens College</h3>
       <h2>Design</h2>
@@ -103,7 +103,7 @@
 
   <a href="http://www.citytech.cuny.edu/communication-design/communication-design-bfa.aspx" class="card-link">
   <div class="card">
-    <img src=images/kings.jpg alt="kings">
+    <img src="images/graphic-hero.jpg" alt="kings">
     <div class="card-body">
       <h3>New York City College Of Technology</h3>
       <h2>Communication Design</h2>
