--- a/Final/manhattan.html
+++ b/Final/manhattan.html
@@ -64,7 +64,7 @@
 <main>
 <a href="http://www.bmcc.cuny.edu/media-arts/mmp_program.jsp" class="card-link">
 <div class="card">
-  <img src=images/bmcc3.jpg alt="bmcc3">
+  <img src="images/MultimediaPro.jpg" alt="bmcc3">
   <div class="card-body">
     <h3>Bourough of Manhattan Community College</h3>
     <h2> Multimedia Programming and Design</h2>
@@ -76,7 +76,7 @@
 
 <a href="https://www.bmcc.cuny.edu/academics/departments/media-arts-and-technology/animation-and-motion-graphics/" class="card-link">
 <div class="card">
-  <img src=images/bmcc4.jpg alt="bmcc4">
+  <img src="images/bmcc4.jpg" alt="bmcc4">
   <div class="card-body">
     <h3>Bourough of Manhattan Community College</h3>
     <h2>Animation and Motion Graphics</h2>
@@ -88,7 +88,7 @@
 
 <a href="https://www.baruch.cuny.edu/confluence/pages/viewpage.action?pageId=24052375" class="card-link">
 <div class="card">
-  <img src=images/baruch.jpg alt="baruch">
+  <img src="images/baruch.jpg" alt="baruch">
   <div class="card-body">
     <h3>Baruch College</h3>
     <h2>Graphic Communication</h2>
@@ -100,7 +100,7 @@
 
 <a href="https://edm.arts.ccny.cuny.edu/" class="card-link">
 <div class="card">
-  <img src=images/baruch2.jpg alt="baruch2">
+  <img src="images/baruch2.jpg" alt="baruch2">
   <div class="card-body">
     <h3>The City College of New York</h3>
     <h2>Electronic Design and Multimedia</h2>
