--- a/Final/bronx.html
+++ b/Final/bronx.html
@@ -65,7 +65,7 @@
 <main>
 <a href="https://lehman.smartcatalogiq.com/en/2019-2021/undergraduate-bulletin/academic-departments-and-programs/art/computer-graphics-and-imaging-b-s-58-credit-major/" class="card-link">
 <div class="card">
-  <img src=images/lehnam2.jpg alt="lehnam">
+  <img src="images/graphic-designer-at-work.jpg" alt="lehnam">
   <div class="card-body">
     <h3>Lehman College</h3>
     <h2>Computer Graphics and Imaging</h2>
@@ -77,7 +77,7 @@
 
 <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Game-Design-(1)" class="card-link">
 <div class="card">
-  <img src=images/hostos.jpg alt="hostos">
+  <img src="images/hostos.jpg" alt="hostos">
   <div class="card-body">
     <h3>Hostos Community College</h3>
     <h2>Game Design</h2>
@@ -89,7 +89,7 @@
 
 <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Digital-Design-Animation" class="card-link">
 <div class="card">
-  <img src=images/hostos3.jpg alt="hostos3">
+  <img src="images/hostos3.jpg" alt="hostos3">
   <div class="card-body">
     <h3>Hostos Community College</h3>
     <h2>Digital Design & Animation</h2>
@@ -101,7 +101,7 @@
 
 <a href="https://www.hostos.cuny.edu/Administrative-Offices/Office-of-Academic-Affairs/Departments/Humanities/Programs/Digital-Design-Animation" class="card-link">
 <div class="card">
-  <img src=images/hostos2.jpg alt="hostos2">
+  <img src="images/hostos2.jpg" alt="hostos2">
   <div class="card-body">
     <h3>Hostos Community College</h3>
     <h2>Digital Design</h2>
