--- a/Final/index.html
+++ b/Final/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CUNY Design</title>
   <link rel="stylesheet" href="style.css">
-  <script src="showMenu.js"></script>
+  <script src="showmenu.js"></script>
 
 </head>
 
