--- a/Final/index.html
+++ b/Final/index.html
@@ -63,7 +63,9 @@
 
     <div class="banner" id="banner-img">
           <h2>Queens College Ranked in Top 25 of Best Public Colleges and Universities for Graphic Design in the Nation</h2>
+          <div class="button-container">
           <a href="https://www.cuny.edu/admissions/apply-to-cuny/utm_source=Google&utm_medium=paid+search&utm_campaign=FY23Undergrad&utm_id=FY23_Undergrad_Search&utm_term=standard&utm_content=standard?gclid=Cj0KCQiA4uCcBhDdARIsAH5jyUl9fQ3nPEbozpRumWp2bq2mcLaSuEJGg8IVOTi0CRIEAifYZiaEXgYaAg0GEALw_wcB" class="button">Apply Now</a>
+          </div>
         </div><!--banner-->
         <main>
           <section class="news">
